fix():create the multiple tenants app

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>tenantservice</module>
         <module>authservice</module>
         <module>common</module>
+        <module>saascommon</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
