--- a/tenantservice/pom.xml
+++ b/tenantservice/pom.xml
@@ -125,5 +125,11 @@
             <artifactId>rocketmq-common</artifactId>
             <version>4.5.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.7.0</version>
+        </dependency>
     </dependencies>
 </project>
